[package]
name = "what-class"
version = "0.1.0"
authors = ["jedeop <me@jedeop.dev>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
sixtyfps = "0.0.5"

[build-dependencies]
sixtyfps-build = "0.0.5"
